# plexMovieFolders

./: .gitignore  build.cake
cs_blazor_plex_importer/: .gitignore  clean.sh  cs_blazor_plex_importer.sln  deploy.sh  run.sh  setup-manual-test.sh
cs_blazor_plex_importer/PlexImport/: Program.cs  SharedData.cs  appsettings.Development.json  appsettings.json
csharp_plex_importer/: .gitignore  build.cake  todo.md
csharp_plex_importer/plex_importer/: Movies.cs  Search.cs  TVShow.cs
csharp_plex_importer/plex_importer.Test/: UnitTest1.cs  plex_importer.Test.csproj
go-plex-import/: .gitignore  build.sh  clean.sh  go.mod  go.sum  main.go  push.sh  run.sh
go-plex-import-2/: .gitignore  Containerfile  clean.sh  go.mod  main.go  push.sh  test.sh
go-plex-import-web/: .gitignore  go.mod  go.sum
go-plex-import-web/cmd/: main.go
go-plex-import-web/scripts/: build.sh
java-plex-import/: pom.xml  publish.sh  push.sh
plex_importer/: Movies.cs  Program.cs  Search.cs  TVShow.cs  deploy.ps1  plex_importer.csproj  plex_importer.sln
plex_importer_rs/: .gitignore  Cargo.toml  justfile
plex_importer_rs/scripts/: clean.sh  publish.sh  push.sh  setup-manual-test.sh
plex_importer_rs/src/: main.rs  (+4 more)
plex_movie_management/: .vimspector.json  Cargo.toml  compile-upload.ps1  publish-deploy.sh  todo.txt
plex_movie_management/.cargo/: config
plex_movie_management/src/: main.rs
py-plex-importer/: Containerfile  clean.sh  plex-importer.py  run.sh  test.sh
src/: Directory.Build.props  plexMovieFolders.sln
swift_pi/: .gitignore
swift_pi_cli/: .gitignore  setup.sh
(+47 files in other folders)
