[package]
name = "plex_content_management"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
fs_extra = "1.2.0"
regex = "1.5.6"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }

